# SimpleEM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  dummy  dummy_duplex  helloworld  helloworld.cpp  logging_dummy_0.txt  logging_dummy_1.txt  logging_dummy_2.txt  logging_dummy_3.txt  logging_dummy_4.txt  logging_tinyem.txt  tcp_client  tcp_server  test_bft.txt  tinyem
configs/: config.txt  config0.txt  config1.txt  config2.txt  config4.txt  config5.txt  config6.txt  config7.txt  config_bftsmart.txt  config_bftsmart0.txt  config_bftsmart1.txt  config_bftsmart_helloworld.txt  config_bftsmart_local.txt  config_bftsmart_local0.txt  config_parser.txt
docs/: Doxyfile
example-tun/: Makefile  pingpong.sh  tinyem  tinyem.c  tinyem.sh
examples/dummy/: dummy.cpp
examples/dummy/config/: config.txt  config0.txt  config1.txt  config2.txt  config3.txt  config4.txt
examples/dummy/include/: algorithms.hpp  dummy.hpp  network-helper.hpp  network.hpp  tcp-peer.hpp  test.hpp  test2.hpp
examples/dummy/include/algorithms/: algorithm-base.hpp  algorithm_base.hpp  algorithms.hpp  byzantine-reliable-broadcast.hpp  loop-network.hpp  single-message-duplex.hpp  single-message.hpp
examples/dummy/src/: dummy.cpp  dummy_duplex.cpp  dummy_local.sh  dummy_test.sh  tcp_peer.cpp
examples/tcp/: tcp_client.c  tcp_server.c
examples/udp/: udp_server.c
include/: config-parser.hpp  config.hpp  emulator.hpp  proc_frame.hpp  tcp_client.h  tcp_server.h  tinyem.h  trans_frame.h  trans_frame.hpp  utils.h  utils.hpp  verbosity.h
include/examples/dummy/: dummy.hpp
include/examples/tcp/: tcp_client.h  tcp_server.h
include/examples/udp/: udp_server.h
include/network/: buffers.hpp  network.hpp  packet.hpp  packets_buffer.hpp  tun_init.hpp
include/proc_control/: context.hpp  emproc.hpp  proc_init.hpp
include/udp/: udp_client.h
include/verbosity/: verbosity.h
library-master/: settings.gradle
library-master/config/: hosts.config
src/: tinyem.cpp
src/em/: proc_frame.c  proc_frame.cpp  tinyem.c  tinyem.cpp  trans_frame.c  trans_frame.cpp  utils.c
src/include/: config-parser.hpp  emulator.hpp  logger.hpp  proc_frame.hpp  tcp_file.hpp  utils.hpp
src/include/network/: network.hpp  packet.hpp  test_packet  test_packet.cpp
src/include/proc_control/: emproc.hpp
src/network/: buffers.cpp  tun_init.cpp
src/proc_control/: context.cpp  proc_init.cpp
src/src/: open_tinyem.sh  proc_frame.cpp  tcp_client  tcp_client.cpp  tcp_server  tcp_server.cpp  test_packet.cpp  time.cpp  tinyem.cpp
src/tcp/: tcp_client.c  tcp_server.c
src/udp/: udp_client.c
src/utils/: report.cpp  time.cpp
